* (T351874) Added language support for Komering (kge).
* (T351992) Added language support for Efik (efi).
* (T352954) Added language support for Rutul (rut).
* (T353058) Added language support for Arbëresh (aae).
* (T353307) Added language support for Guadeloupean Creole (gcf).
* (T353500) Added language support for Southeastern Kolami (nit).
* …

=== Breaking changes in 1.42 ===
* TitleArray, deprecated since 1.41, has been removed.
* UserRightsProxy, deprecated since 1.38, has been removed.
* UserLoginCompleteHook is always called with its $direct parameter set to
  boolean true. The false case has been removed.
* MagicWord::load() has been marked @internal and may change in the future
  without further notice.
* BagOStuff::setNewPreparedValues() now emits deprecation warnings.
* The type of the last parameter of BeforeInitializeHook::onBeforeInitialize
  and MediaWikiPerformActionHook::onMediaWikiPerformAction changed from
  MediaWiki to ActionEntryPoint. Relevant methods are still available on
  the object.
* MediaWiki's virtualrest internal library has been removed in favor of the
  HTTP library like: Guzzle, MultiHttpClient or MwHttpRequest.
* Several deprecated methods have been removed from the Content interface,
  in favor of the respective methods in ContentHandlers. Callers should
  use a more narrow interface like ContentRenderer or ContentTransformer
  when possible. The following methods have been removed from Content:
  - getParserOutput()
  - preSaveTransform()
  - preloadTransform()
  - prepareSave()
* ParserOutput::setFlag() and ::getFlag(), deprecated in 1.38, were removed. You
  should use ::setOutputFlag() and ::getOutputFlag() instead.
* PostgresUpdater::addPgEnumValue() unused everywhere, have been removed
  without deprecation. Use of ENUM is highly discouraged.
* ILoadBalancer::getAnyOpenConnection() has been removed without deprecation,
  use ::getConnection() instead.