@@ -1,0 +1,12 @@
+<?php
+/** Tooro (Orutooro)
+ *
+ * @file
+ * @ingroup Languages
+ *
+ * @author Jon Harald Søby
+ */
+
+$fallback = 'nyo, nyn, lg';
+
+$linkTrail = '/^([a-z]+)(.*)$/sDu';
