@@ -121,6 +121,7 @@ because of Phabricator reports.
 * (T353058) Added language support for Arbëresh (aae).
 * (T353307) Added language support for Guadeloupean Creole (gcf).
 * (T353500) Added language support for Southeastern Kolami (nit).
+* (T354519) Added language support for Tooro (ttj).
 * …
 
 === Breaking changes in 1.42 ===
